--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-language: swift
+language: objective-c
+osx_image: xcode8
 xcode_project: AZViewer.xcodeproj # path to your xcodeproj folder
 #xcode_scheme: MyNewProjectTests
-osx_image: xcode8
+xcode_sdk: iphonesimulator8.4 #5
