--- a/AZViewer/Info.plist
+++ b/AZViewer/Info.plist
@@ -18,6 +18,8 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>NSContactsUsageDescription</key>
+	<string>ما برای مکانیزم های نرم افزار نیازمند دسترسی به مخاطبین هستیم</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 	<key>UIAppFonts</key>
