--- a/AZViewer Example/Info.plist
+++ b/AZViewer Example/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>ما برای نمایش عکس ها به این دسترسی احتیاج داریم.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>ما برای نمایش عکس ها به این دسترسی احتیاج داریم.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>NSAppTransportSecurity</key>
